
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll_view">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".PaceCalculator"
	    
	    >
	
	    
	    
	    <TextView 
	        android:id="@+id/custom_switch_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/custom_distance"
	        android:textSize="@dimen/small_text_size"
	        android:layout_marginRight="5dp"
	        
	        android:layout_alignParentTop="true"
	        android:layout_alignParentRight="true"/>
	    
	    <Switch 
	        android:id="@+id/custom_switch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textOn="@string/text_on"
	        android:textOff="@string/text_off"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/custom_switch_text"
	        android:textSize="@dimen/small_text_size"
	        />
	    
	    
	    <TextView
	        android:id="@+id/subtitle_convert_activity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subtitle_convert_activity"
	        android:textSize="@dimen/header_text_size"
	        android:layout_toLeftOf="@id/custom_switch"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@id/custom_switch"
	        />
	    
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:layout_below="@id/subtitle_convert_activity"
	        android:orientation="horizontal"
	        android:id="@+id/mileage_custom_block"
	        android:visibility="invisible"
	        >
	        
		        <EditText 
			        android:id="@+id/distance_entry"
			        android:layout_width="0dp"
			        android:layout_weight="3"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal"
			        android:hint="@string/distance"
			        android:gravity="bottom"
		        
		        />
	    
			    <Spinner 
			        android:id="@+id/mileage_units_selector"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
			        android:gravity="bottom"
			        style="@style/PickerEditText"/>
	    </LinearLayout>
	    
	    <Spinner 
	        android:id="@+id/distance"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/PickerEditText"
	        android:prompt="@string/select_units"
	        android:spinnerMode="dialog"
	        
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:layout_below="@id/subtitle_convert_activity"
	        />
	    
	    
	    

	    
	
	    
	    <EditText 
	        android:id="@+id/moving_time_entry"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/moving_time"
	        android:inputType="none"
	        android:layout_below="@id/mileage_custom_block"
	        android:onClick="showPicker"
	        
	        
	        />
	    <Button 
	        android:id="@+id/calculate_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/calculate"
	        android:layout_below="@id/moving_time_entry"
	        android:layout_marginTop="@dimen/activity_vertical_margin" />
	    
	    
	    
	        <TextView 
	        android:id="@+id/results_title"
	        android:layout_below="@id/calculate_button"
	        android:layout_width="match_parent"
	        android:layout_height= "wrap_content"
	        android:layout_marginTop="@dimen/activity_double_vertical_margin"
	        android:textSize="@dimen/header_text_size"
	        android:text="@string/results"
	        android:visibility="invisible"
	        
	        />
	        
	    <LinearLayout
	        android:id="@+id/result_header_block"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_below="@id/results_title"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:visibility="invisible"
	        
	         >
	  
		     <TextView
		         android:id="@+id/result_header_moving_time_value"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="00:20:00"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>
		     <View 
		         android:layout_width="1dp"
		         android:layout_height="match_parent"
		         android:background="@android:color/holo_blue_light"
		         />
		     
		     <TextView
		         android:id="@+id/result_header_distance_value"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="5k"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>
		     
		     <View 
		         android:layout_width="1dp"
		         android:layout_height="match_parent"
		         android:background="@android:color/holo_blue_light"
		         />
		     
		     <TextView
		         android:id="@+id/result_header_pace_value"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="4:00min/k"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>            
	         
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/result_header_block2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_below="@id/result_header_block"
	        android:visibility="invisible"
	       
	         >
	  
		     <TextView
		         android:id="@+id/result_header_moving_time"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="@string/moving_time"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>
		     <View 
		         android:layout_width="1dp"
		         android:layout_height="match_parent"
		         android:background="@android:color/holo_blue_light"
		         />
		     
		     <TextView
		         android:id="@+id/result_header_distance"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="@string/distance"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>
		     <View 
		         android:layout_width="1dp"
		         android:layout_height="match_parent"
		         android:background="@android:color/holo_blue_light"
		         />
		     
		     <TextView
		         android:id="@+id/result_header_pace"
		         android:layout_width="0dp"
		         android:layout_height="wrap_content"
		         android:layout_weight="1"
		         android:text="@string/pace"
		         android:textSize="@dimen/medium_text_size"
		         android:gravity="center"/>            
		         
		    </LinearLayout>
		    <View 
		        android:id="@+id/horizontal_rule_result_header"
		         android:layout_width="match_parent"
		         android:layout_height="1dp"
		         android:layout_below="@id/result_header_block2"
		         android:layout_marginTop="@dimen/activity_vertical_margin"
		         android:background="@android:color/holo_blue_light"
		         android:visibility="invisible"
		         />
		    
	    <ListView
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:id="@+id/results_list_view"
	        android:layout_below="@id/result_header_block2"
	        android:choiceMode="singleChoice"
	        android:visibility="invisible">
	        
	    </ListView>
	
	            
	   
	
	</RelativeLayout>
</ScrollView>
